Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136452

qmllint - no way to treat `missing-enum-entry` as warning

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.4, 6.9.1, 6.9
    • 6.8.3, 6.9.0
    • QML: Tooling
    • None
    • 7bbed761c (6.9), 45bf773e3 (tqtc/lts-6.8)

      qmllint will correctly produce [missing-enum-entry] when a non-existent enum value is used in a QML file.

      Unlike other lints however, there does not appear to be a way to make this lint a warning. There is no --missing-enum-entry=warning command line option, nor does qmllint respect a MissingEnumEntry=warning line in a .qmllint.ini file.

        For Gerrit Dashboard: QTBUG-136452
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            m.ker Máté Kerekes
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes